增加ceramic crud actions
Change-Id: Ib45c606bb9c07ebbb36584533c848a3a27089bb2
Signed-off-by: karlchan-cn <karlchan.cn@gmail.com>

--- a/src/main/webapp/WEB-INF/freemarker/lib/master.html
+++ b/src/main/webapp/WEB-INF/freemarker/lib/master.html
@@ -1,18 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <@block name="import"></@block>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="zh-cn">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="zh-CN" />
 <meta property="qc:admins" content="2451163207645273056375" />
 
-<@block name="title"><title>5253手游5253.com</title></@block>
+<@block name="title"><title>Grocery</title></@block>
 <@block name="keywords"><meta name="Keywords" content="5253手游5253.com" /></@block> 
 <@block name="description"><meta name="description" content="5253手游5253.com" /></@block>
 <!-- 新 Bootstrap 核心 CSS 文件 -->
-<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <!-- 可选的Bootstrap主题文件（一般不用引入） -->
-<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="http://v3.bootcss.com/examples/dashboard/dashboard.css">
 <@block name="style_before"></@block> 
  
 <@block name="style_pre"></@block>
@@ -23,8 +24,7 @@
 
 </head>
 <body>
-<@block name="seo_h1">
-<h1 class="seoH1">5253手游</h1>	
+<@block name="seo_h1">	
 </@block>
 <@block name="content"></@block>
 
