ADMIN console developing.
Change-Id: I2125c7e161949f8334944d5997fad98cfc5aa85c
Signed-off-by: karlchan-cn <karlchan.cn@gmail.com>

--- a/src/main/webapp/WEB-INF/freemarker/lib/master.html
+++ b/src/main/webapp/WEB-INF/freemarker/lib/master.html
@@ -7,8 +7,8 @@
 <meta property="qc:admins" content="2451163207645273056375" />
 
 <@block name="title"><title>Grocery</title></@block>
-<@block name="keywords"><meta name="Keywords" content="5253手游5253.com" /></@block> 
-<@block name="description"><meta name="description" content="5253手游5253.com" /></@block>
+<@block name="keywords"><meta name="Keywords" content="" /></@block> 
+<@block name="description"><meta name="description" content="" /></@block>
 <!-- 新 Bootstrap 核心 CSS 文件 -->
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <!-- 可选的Bootstrap主题文件（一般不用引入） -->
