--- a/src/main/webapp/WEB-INF/freemarker/admin/logon/signin.html
+++ b/src/main/webapp/WEB-INF/freemarker/admin/logon/signin.html
@@ -34,13 +34,14 @@
 
 	<div class="container">
 
-		<form class="form-signin">
+		<form class="form-signin" method="POST" action="/admin/login">
 			<h2 class="form-signin-heading">Please sign in</h2>
+			<input type="hidden" name="redirect" value="${redirect}">
 			<label class="sr-only" for="inputEmail">Email address</label> <input
-				type="email" autofocus="" required="" placeholder="Email address"
+				 name="userName" autofocus="" required="" placeholder="Email address"
 				class="form-control" id="inputEmail"> <label class="sr-only"
 				for="inputPassword">Password</label> <input type="password"
-				required="" placeholder="Password" class="form-control"
+				required="" placeholder="Password" name="password" class="form-control"
 				id="inputPassword">
 			<div class="checkbox">
 				<label> <input type="checkbox" value="remember-me">
